# Crypto-PolyMarket-TradingBot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: sample_ticks.csv
src/crypto_polymarket_trading_bot/: __init__.py
src/crypto_polymarket_trading_bot/app/: dashboard.py
src/crypto_polymarket_trading_bot/backtest/: __init__.py  metrics.py  replay.py
src/crypto_polymarket_trading_bot/cli/: main.py
src/crypto_polymarket_trading_bot/config/: __init__.py  settings.py
src/crypto_polymarket_trading_bot/data/: __init__.py  _aiohttp_helpers.py  binance.py  doh.py  polymarket.py
src/crypto_polymarket_trading_bot/execution/: __init__.py  base.py  live.py  paper.py
src/crypto_polymarket_trading_bot/historical/: __init__.py  models.py  pipeline.py
src/crypto_polymarket_trading_bot/ingestion/: __init__.py  historical.py  polymarket.py
src/crypto_polymarket_trading_bot/storage/: __init__.py  db.py  repository.py
src/crypto_polymarket_trading_bot/strategy/: __init__.py  engine.py  models.py
tests/: test_backtest.py  test_binance.py  test_cli.py  test_historical.py  test_polymarket.py  test_settings.py  test_storage.py  test_strategy.py
