[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-polymarket-trading-bot"
version = "0.1.0"
description = "Polymarket-driven Binance Futures trading bot scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10,<4.0",
  "httpx>=0.27,<0.29",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "streamlit>=1.34,<2.0",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.9,<2.0",
  "pytest>=8.1,<9.0",
  "ruff>=0.4,<0.8",
]

[project.scripts]
cpmtb = "crypto_polymarket_trading_bot.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["crypto_polymarket_trading_bot"]
